# AEC_RAG

./: .gitignore  Dockerfile  README.md  deps_test.py  docker-compose.yml  initial.md  main.py  pyproject.toml  tender_rag_plan.md
src/agent/: agent.py  prompts.py  tools.py
src/api/: controller.py  main.py
src/api/static/: index.html
src/db/: database.py  graph_db.py  init_db.py  models.py
src/ingestion/: chunker.py  embed.py  parser.py  pipeline.py
src/retrieval/: search.py
tests/: interp.py  test_chunker.py  test_db_models.py
