[project]
name = "aec-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-ai",
    "asyncpg",
    "sqlmodel",
    "pgvector",
    "graphiti-core",
    "openai",
    "tiktoken",
    "typing",
    "python-dotenv",
    "torch",
    "torchvision",
    "docling",
    "numpy==1.26.4",
]
